--- a/client/index.html
+++ b/client/index.html
@@ -17,11 +17,14 @@
     <input type="file" class="file" /><br>
     <input type="submit" />
   </form>
+  <button id="random">Random Move From Server</button>
+  <button id="sendserver">Send Server Move</button>
 </body>
 <script src="/node_modules/jquery/dist/jquery.js"></script>
 <script src="/node_modules/underscore/underscore.js"></script>
 <script src="/js/swimTeam.js"></script>
 <script src="/js/keypressHandler.js"></script>
+<script src="/js/httpHandler.js"></script>
 
 </html>
 
