Implementing getting back image from server.

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
 <body>
   <h1>A Synchronous Swim</h1>
   <div class="pool">
+    <div class="background"></div>
     <div class="team">
       <div class="swimmer">↜</div>
       <div class="swimmer">↜</div>
